test_suite5/ALAN/test_suite/alan-2022-examples/failing/005370_mutation.alan
source XB begin leave if; leave end
